Fix job descriptions not showing

--- a/style.css
+++ b/style.css
@@ -527,6 +527,7 @@ footer h2 {
     grid-template-columns: 2fr 4fr;
     grid-column-gap: 1rem;
     grid-auto-flow: dense;
+    margin-bottom: var(--baseline);
   }
 
   .job .title {
@@ -539,13 +540,17 @@ footer h2 {
     grid-column-start: 1;
   }
 
-  .job .title,
-  .job .description {
+  #history .job .title,
+  #history .job .description {
     grid-column-start: 2;
     max-height: none;
   }
 
-  .job .read-description {
+  #history .job .description p:first-child {
+    margin-top: 0;
+  }
+
+  #history .job .read-description {
     display: none;
   }
 }
